ui fix - add card when visible scroll

--- a/frontend/src/assets/styles/cmps/_list-preview.scss
+++ b/frontend/src/assets/styles/cmps/_list-preview.scss
@@ -92,6 +92,9 @@
   }
 
   .add-card {
+    &.visible-scroll {
+      padding-right: 12px;
+    }
     .btn-adding {
       gap: 5px;
       width: 100%;
